create and style modal background, show and hide

--- a/modals/modal_1/index.html
+++ b/modals/modal_1/index.html
@@ -10,6 +10,8 @@
 <body>
     <button onclick="toggleModal()" type="button">Open Modal</button>
 
+    <div class="modal-background" onclick="toggleModal()"></div>
+
     <script>
         const toggleModal = () => {
             const bodyClassList = document.body.classList;
