--- a/modals/modal_1/index.html
+++ b/modals/modal_1/index.html
@@ -12,6 +12,13 @@
 
     <div class="modal-background" onclick="toggleModal()"></div>
 
+    <div class="modal">
+        <h2>Modal Window</h2>
+        <p>
+            You have opened the modal, they are great for displaying critical informations or confirming actions!
+        </p>
+    </div>
+
     <script>
         const toggleModal = () => {
             const bodyClassList = document.body.classList;
