--- a/footers/footer_1/index.html
+++ b/footers/footer_1/index.html
@@ -33,8 +33,67 @@
                     </ul>
                 </div>
 
-                
+                <div>
+                    <h6 class="footer-title">Microsoft Store</h6>
+
+                    <ul class="footer-list">
+                        <li class="footer-list-item">
+                            <a href="#" class="footer-list-link">About</a>
+                        </li>
+                        <li class="footer-list-item">
+                            <a href="#" class="footer-list-link">Careers</a>
+                        </li>
+                        <li class="footer-list-item">
+                            <a href="#" class="footer-list-link">Affiliates</a>
+                        </li>
+                        <li class="footer-list-item">
+                            <a href="#" class="footer-list-link">Sitemap</a>
+                        </li>
+                    </ul>
+                </div>
+
+                <div>
+                    <h6 class="footer-title">Microsoft Store</h6>
+
+                    <ul class="footer-list">
+                        <li class="footer-list-item">
+                            <a href="#" class="footer-list-link">About</a>
+                        </li>
+                        <li class="footer-list-item">
+                            <a href="#" class="footer-list-link">Careers</a>
+                        </li>
+                        <li class="footer-list-item">
+                            <a href="#" class="footer-list-link">Affiliates</a>
+                        </li>
+                        <li class="footer-list-item">
+                            <a href="#" class="footer-list-link">Sitemap</a>
+                        </li>
+                    </ul>
+                </div>
+
+                <div>
+                    <h6 class="footer-title">Microsoft Store</h6>
+
+                    <ul class="footer-list">
+                        <li class="footer-list-item">
+                            <a href="#" class="footer-list-link">About</a>
+                        </li>
+                        <li class="footer-list-item">
+                            <a href="#" class="footer-list-link">Careers</a>
+                        </li>
+                        <li class="footer-list-item">
+                            <a href="#" class="footer-list-link">Affiliates</a>
+                        </li>
+                        <li class="footer-list-item">
+                            <a href="#" class="footer-list-link">Sitemap</a>
+                        </li>
+                    </ul>
+                </div>
             </div>
+
+            <hr class="footer-divider">
+
+            
         </div>
     </footer>
 </body>
