--- a/footers/footer_1/index.html
+++ b/footers/footer_1/index.html
@@ -93,7 +93,27 @@
 
             <hr class="footer-divider">
 
-            
+            <div class="footer-bottom">
+                <span class="copyright">&copy; 2025 João Gonçalves. All rights reserved.</span>
+
+                <ul class="footer-list">
+                    <li class="footer-list-item">
+                        <a href="#" class="footer-list-link">
+                            <i class="ri-facebook-circle-line"></i>
+                        </a>
+                    </li>
+                    <li class="footer-list-item">
+                        <a href="#" class="footer-list-link">
+                            <i class="ri-instagram-line"></i>
+                        </a>
+                    </li>
+                    <li class="footer-list-item">
+                        <a href="#" class="footer-list-link">
+                            <i class="ri-twitter-line"></i>
+                        </a>
+                    </li>
+                </ul>
+            </div>
         </div>
     </footer>
 </body>
