style sidebar content

--- a/sidebars/sidebar_2/index.html
+++ b/sidebars/sidebar_2/index.html
@@ -40,7 +40,7 @@
             <button>
                 <span>
                     <i class="bx bxl-telegram">
-                        13
+                        <span>13</span>
                     </i>
                     <span>Messages</span>
                 </span>
