--- a/navbars/navbar_1/index.html
+++ b/navbars/navbar_1/index.html
@@ -15,6 +15,14 @@
         <button type="button" class="navbar-burger" onclick="toggleMenuOpen()">
             <span class="material-icons">menu</span>
         </button>
+
+        <h1 class="navbar-title">João Gonçalves</h1>
+        
+        <nav class="navbar-menu">
+            <button type="button" class="active">Youtube</button>
+            <button type="button" class="active">Archive</button>
+            <button type="button">Projects</button>
+        </nav>
     </nav>
 
     <script type="text/javascript">
