--- a/navbars/navbar_2/index.html
+++ b/navbars/navbar_2/index.html
@@ -19,6 +19,11 @@
             <span>Gmail</span>
         </div>
 
+        <div class="search">
+            <span class="material-symbols-outlined">Search</span>
+            <input type="text" spellcheck="false" id="search" class="search" placeholder="Search Mail">
+        </div>
+
         
     </nav>
 
