--- a/navbars/navbar_2/index.html
+++ b/navbars/navbar_2/index.html
@@ -24,7 +24,12 @@
             <input type="text" spellcheck="false" id="search" class="search" placeholder="Search Mail">
         </div>
 
-        
+        <nav>
+            <button class="material-symbols-outlined">help</button>
+            <button class="material-symbols-outlined">settings</button>
+            <button class="material-symbols-outlined">apps</button>
+            <img src="logo.png" alt="">
+        </nav>
     </nav>
 
     <script type="text/javascript">
